force-app/main/default/objects/Vehicle_Text_Data__c/Vehicle_Text_Data__c.object-meta.xml
<CustomObject>
    <label>Vehicle Text Data</label>
    <nameField>
        <displayFormat>VTD-{00000}</displayFormat>
        <label>Vehicle Text Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles Text Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>