force-app/main/default/objects/Vehicle_Text_Data__c/fields/Information_text__c.field-meta.xml
<CustomField>
    <fullName>Information_text__c</fullName>
    <label>Information text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>